# agentic-platform-f57nr0

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  (+1 more)
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/backend/src/: __init__.py
src/backend/src/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  security.py
src/backend/src/api/routes/: __init__.py  agents.py  auth.py  deployments.py  health.py  knowledge.py  metrics.py  orchestration.py  templates.py
src/backend/src/config/: __init__.py  aws.py  database.py  logging.py  settings.py
src/backend/src/core/: __init__.py
src/backend/src/core/agents/: __init__.py  builder.py  config_validator.py  executor.py  factory.py  templates.py
src/backend/src/core/auth/: __init__.py  cognito.py  permissions.py  tokens.py
src/backend/src/core/deployment/: __init__.py  ecs.py  lambda_deployer.py  strategy.py
src/backend/src/core/knowledge/: __init__.py  embeddings.py  indexer.py  opensearch.py  rag.py  vectorstore.py
src/backend/src/core/orchestration/: __init__.py  coordinator.py  event_bus.py  scheduler.py  workflow.py
src/backend/src/db/: __init__.py
src/backend/src/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/src/db/models/: __init__.py  agent.py  deployment.py  knowledge.py  metrics.py  template.py  user.py
src/backend/src/db/repositories/: __init__.py  agent_repository.py  deployment_repository.py  knowledge_repository.py  template_repository.py  user_repository.py
src/backend/src/integrations/: __init__.py
src/backend/src/integrations/aws/: __init__.py  bedrock.py  cloudwatch.py  dynamodb.py  eventbridge.py  kms.py  s3.py
src/backend/src/integrations/enterprise/: __init__.py  confluence.py  docebo.py  lever.py  mavenlink.py  rippling.py
src/backend/src/integrations/llm/: __init__.py  anthropic.py  openai.py
src/backend/src/schemas/: __init__.py  agent.py  auth.py  deployment.py  knowledge.py  metrics.py  template.py  user.py
src/backend/src/services/: __init__.py  agent_service.py  auth_service.py  deployment_service.py  knowledge_service.py  metrics_service.py  template_service.py
src/backend/src/utils/: __init__.py  encryption.py  logging.py  metrics.py  validation.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py
src/backend/tests/integration/api/: __init__.py  test_agents.py  test_auth.py  test_deployments.py  test_knowledge.py
src/backend/tests/integration/core/: __init__.py  test_agent_builder.py  test_knowledge_service.py  test_orchestration.py
src/backend/tests/unit/: __init__.py
src/backend/tests/unit/core/: __init__.py  test_agents.py  test_auth.py  test_deployment.py  test_knowledge.py  test_orchestration.py
src/backend/tests/unit/db/: __init__.py  test_repositories.py
src/backend/tests/unit/integrations/: __init__.py  test_aws.py  test_enterprise.py  test_llm.py
src/backend/tests/unit/services/: __init__.py  test_agent_service.py  test_auth_service.py  test_knowledge_service.py
(+204 files in other folders)
