[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-builder-hub-backend"
version = "0.1.0"
description = "Backend services for the Agent Builder Hub platform"
authors = ["Hakkoda <engineering@hakkoda.io>"]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "Proprietary"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Core dependencies
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
python-multipart = "^0.0.6"
email-validator = "^2.1.0"

# Database dependencies
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# Security dependencies
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^41.0.0"

# AI/ML dependencies
langchain = "^0.1.0"
anthropic = "^0.5.0"
openai = "^1.3.0"
tiktoken = "^0.5.1"
numpy = "^1.26.0"
pandas = "^2.1.0"

# AWS dependencies
boto3 = "^1.29.0"
aws-lambda-powertools = "^2.26.0"
aws-xray-sdk = "^2.12.0"

# Storage dependencies
redis = "^5.0.0"
opensearch-py = "^2.3.0"
minio = "^7.2.0"

# Monitoring dependencies
prometheus-client = "^0.18.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42.0"

[tool.poetry.group.dev.dependencies]
# Testing dependencies
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.0"
pytest-xdist = "^3.3.0"
faker = "^20.1.0"

# Linting dependencies
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pylint = "^3.0.2"
bandit = "^1.7.5"
safety = "^2.3.5"

# Development tools
pre-commit = "^3.5.0"
httpx = "^0.25.0"
docker = "^6.1.0"
pip-audit = "^2.6.1"
bump2version = "^1.0.1"

# Documentation dependencies
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/backend/src/**/*.py"
extend-exclude = "/migrations/"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
known_first_party = ["agent_builder_hub"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/backend/src --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=90"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running"
]